--- a/app/views/gacha_contents/edit.html.erb
+++ b/app/views/gacha_contents/edit.html.erb
@@ -1,6 +1,5 @@
-<h1>Editing Gacha Content</h1>
+<h3>ガチャ結果を編集</h3>
 
 <%= render 'form', gacha_content: @gacha_content %>
 
-<%= link_to 'Show', @gacha_content %> |
 <%= link_to 'Back', gacha_contents_path %>
