Fix table and validation

--- a/app/views/gacha_contents/index.html.erb
+++ b/app/views/gacha_contents/index.html.erb
@@ -14,7 +14,7 @@
               <th class='uk-width-small'><%= sortable 'user', '所持者' %></th>
               <th class='uk-width-small'><%= sortable 'rarity', 'レア度' %></th>
               <th class='uk-width-small'><%= sortable 'mark', '属性' %></th>
-              <th><%= sortable 'name', '名前' %></th>
+              <th class='uk-width-medium'><%= sortable 'name', '名前' %></th>
               <th class='uk-width-small'><%= sortable 'how_many', '何連' %></th>
             </tr>
         </thead>
