--- a/app/views/gacha_contents/_form.html.erb
+++ b/app/views/gacha_contents/_form.html.erb
@@ -39,7 +39,7 @@
     <div class="uk-margin">
       <label class="uk-form-label" for="form-horizontal-text">何連？</label>
       <div class="uk-form-controls">
-        <%= form.select :how_many, { '単発' => '単発', '10連' => '10連', '天井交換' => '天井交換'}, {}, class: 'uk-select uk-form-width-large' %>
+        <%= form.select :how_many, { '単発' => '単発', '10連' => '10連', 'サプチケ' => 'サプチケ', 'スタレジェ' => 'スタレジェ', '無料10連' => '無料10連', '天井交換' => '天井交換'}, {}, class: 'uk-select uk-form-width-large' %>
       </div>
     <div class="uk-margin">
       <label class="uk-form-label" for="form-horizontal-text">所持者</label>
