--- a/app/views/gacha_contents/new.html.erb
+++ b/app/views/gacha_contents/new.html.erb
@@ -1,5 +1,5 @@
-<h3>New Gacha Content</h3>
+<h3>ガチャ結果を入力</h3>
 
 <%= render 'form', gacha_content: @gacha_content %>
 
-<%= link_to 'Back', gacha_contents_path %>
+<%= link_to 'ガチャ結果に戻る', gacha_contents_path, class: "uk-button uk-button-default" %>
