--- a/app/views/gacha_contents/edit.html.erb
+++ b/app/views/gacha_contents/edit.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form', gacha_content: @gacha_content %>
 
-<%= link_to 'Back', gacha_contents_path %>
+<%= link_to 'ガチャ結果に戻る', gacha_contents_path,  class: "uk-button uk-button-default" %>
