--- a/app/views/gacha_contents/_form.html.erb
+++ b/app/views/gacha_contents/_form.html.erb
@@ -15,7 +15,7 @@
     <div class="uk-margin">
       <label class="uk-form-label" for="form-horizontal-text">日付</label>
       <div class="uk-form-controls">
-        <%= form.date_field :lucky_day, value: Time.now.strftime('%Y-%m-%d'), class: 'uk-input uk-form-width-large'  %>
+        <%= form.date_field :lucky_day, value: gacha_content.lucky_day&.strftime('%Y-%m-%d'), class: 'uk-input uk-form-width-large'  %>
       </div>
     </div>      
     <div class="uk-margin">
