--- a/app/views/grc_tools/about.html.erb
+++ b/app/views/grc_tools/about.html.erb
@@ -1,2 +1,8 @@
-<h1>GrcTool#about</h1>
-<p>Find me in app/views/grc_tool/about.html.erb</p>
+<h3>このサイトの使い方</h3>
+<%= link_to 'ガチャ結果に戻る', gacha_contents_path, class: "uk-button uk-button-default" %>
+
+<ul class="uk-list">
+    <li>１．初めて使用する場合、最初に「ユーザー登録」ボタンを押しユーザーを登録します。</li>
+    <li>２．ガチャ結果を入力します。「結果入力」ボタンを押す(この時、所持者は自分が登録したユーザーを選択)</li>
+    <li>３．ガチャ結果一覧で確認してドヤ顔( ･´ｰ･｀)</li>
+</ul>
