--- a/app/views/grc_tools/release_notes.html.erb
+++ b/app/views/grc_tools/release_notes.html.erb
@@ -2,21 +2,23 @@
 <%= link_to 'ガチャ結果に戻る', gacha_contents_path, class: "uk-button uk-button-default" %>
 
 <ul uk-accordion="multiple: true">
-    <li class="uk-open">
-        <a class="uk-accordion-title" href="#">ver.2.0 2018/11/27(火)</a>
-        <div class="uk-accordion-content">
-            <p>リリースノート更新開始</p>
-            <p>ページングできるようになりました。</p>
-            <p>入力済みのガチャ結果の日付を保持できるようになりました。</p>
-            <p>入力フォームの「何連？」種類を増やしました。</p>
-        </div>
-    </li>
-    <hr>
-    <li>
-        <a class="uk-accordion-title" href="#">ver.1.0 2018/11/03(水)</a>
-        <div class="uk-accordion-content">
-            <p>Gacha Contents Toolの開発開始</p>
-        </div>
-    </li>
-
+  <li>
+    <a class="uk-accordion-title" href="#">ver.2.0 2018/11/27(火)</a>
+    <div class="uk-accordion-content">
+        <ul>
+          <li>リリースノート更新開始</li>
+          <li>ページングできるようになりました。(bootstrap4使用)</li>
+          <li>入力済みのガチャ結果の日付を保持できるようになりました。</li>
+          <li>入力フォームの「何連？」種類を増やしました。</li>
+        </ul>
+    </div>
+  </li>
+  <li>
+    <a class="uk-accordion-title" href="#">ver.1.0 2018/11/03(水)</a>
+    <div class="uk-accordion-content">
+      <ul>
+        <li>Gacha Contents Toolの開発開始</li>
+      </ul>
+    </div>
+  </li>
 </ul>
