--- a/app/views/grc_tools/release_notes.html.erb
+++ b/app/views/grc_tools/release_notes.html.erb
@@ -3,6 +3,15 @@
 
 <ul uk-accordion="multiple: true">
   <li>
+    <a class="uk-accordion-title" href="#">ver.2.1 2018/11/28(水)</a>
+    <div class="uk-accordion-content">
+        <ul>
+           <li>使用方法を追加</li>
+           <li>編集・削除ボタンのサイズを調整</li>
+        </ul>
+    </div>
+  </li>
+  <li>
     <a class="uk-accordion-title" href="#">ver.2.0 2018/11/27(火)</a>
     <div class="uk-accordion-content">
         <ul>
