--- a/app/views/grc_tools/home.html.erb
+++ b/app/views/grc_tools/home.html.erb
@@ -1,2 +1,2 @@
-<h1>GrcTool</h1>
-<p><%= link_to('結果を入力しに行く', new_gacha_content_path) %></p>
+<h1>Gacha Contents Tool</h1>
+<p><%= link_to('グラブルガチャ入力結果一覧', gacha_contents_path, class: 'uk-button uk-button-default uk-button-large') %></p>
