--- a/app/views/gacha_contents/index.html.erb
+++ b/app/views/gacha_contents/index.html.erb
@@ -1,5 +1,6 @@
 <div>
-  <div class='uk-text-large'>Gacha Contents Tool
+  <div class='uk-visible@s'>
+    <h3>Gacha Contents Tool</h3>
     <%= link_to '結果入力', new_gacha_content_path, class: 'uk-button uk-button-default uk-button-small' %>
     <%= link_to 'ユーザー登録', new_user_path, class: 'uk-button uk-button-default uk-button-small' %>
     <%= link_to 'アップデート内容', grc_tools_release_notes_path, class: 'uk-button uk-button-default uk-button-small' %>
@@ -9,8 +10,10 @@
   <% if GachaContent.count == 0 %>
     <p> ガチャ結果は何もありません </p>
   <% else %>
-    <%= paginate @gacha_contents %>
-    <div class='uk-flex uk-flex-right uk-margin'>
+    <div class='uk-margin'>
+      <%= paginate @gacha_contents %>
+    </div>
+    <div class='uk-margin'>
       <table class='uk-table uk-table-hover uk-table-divider uk-table-small table-striped table-bordered table-hover'>
         <thead>
             <tr>
@@ -20,7 +23,7 @@
               <th class='uk-width-small'><%= sortable 'mark', '属性' %></th>
               <th class='uk-width-medium'><%= sortable 'name', '名前' %></th>
               <th class='uk-width-small'><%= sortable 'how_many', '何連' %></th>
-              <th></th>
+              <th class='uk-width-small'>操作</th>
             </tr>
         </thead>
         <tbody>
