--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html class="uk-background-muted">
   <head>
     <title>GRCTool</title>
     <%= csrf_meta_tags %>
@@ -11,7 +11,7 @@
     <%= javascript_include_tag 'application' %>
   </head>
 
-  <body>
+  <body class="uk-background-muted">
     <%= yield %>
   </body>
 </html>
