--- a/app/views/grc_tools/release_notes.html.erb
+++ b/app/views/grc_tools/release_notes.html.erb
@@ -3,6 +3,14 @@
 
 <ul uk-accordion="multiple: true">
   <li>
+    <a class="uk-accordion-title" href="#">ver.2.2 2018/11/30(金)</a>
+    <div class="uk-accordion-content">
+        <ul>
+           <li>レア度、属性、何連？の取得方法を変更(enum使用)</li>
+        </ul>
+    </div>
+  </li>
+  <li>
     <a class="uk-accordion-title" href="#">ver.2.1 2018/11/28(水)</a>
     <div class="uk-accordion-content">
         <ul>
