--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -25,7 +25,7 @@
     </div>
     <div class="uk-margin">
       <div class="uk-form-controls"> 
-        <%= form.submit nil, class: 'uk-button uk-button-small uk-button-primary uk-width-large' %>
+        <%= form.submit "ユーザーを登録", class: 'uk-button uk-button-small uk-button-primary uk-width-large' %>
       </div>
      </div>
   </div>
