--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form', user: @user %>
 
-<%= link_to 'ユーザー管理', users_path %>
+<%= link_to 'ユーザー管理', users_path, class: 'uk-button uk-button-default uk-button-small' %>
