--- a/app/views/grc_tools/release_notes.html.erb
+++ b/app/views/grc_tools/release_notes.html.erb
@@ -3,6 +3,15 @@
 
 <ul uk-accordion="multiple: true">
   <li>
+    <a class="uk-accordion-title" href="#">ver.3.0 2018/12/02(日)</a>
+    <div class="uk-accordion-content">
+        <ul>
+           <li>個人のガチャ結果を閲覧できるようになりました</li>
+           <li>ユーザー管理画面を変えました</li>
+        </ul>
+    </div>
+  </li>
+  <li>
     <a class="uk-accordion-title" href="#">ver.2.2 2018/11/30(金)</a>
     <div class="uk-accordion-content">
         <ul>
