--- a/app/views/grc_tools/release_notes.html.erb
+++ b/app/views/grc_tools/release_notes.html.erb
@@ -2,6 +2,14 @@
 <%= link_to 'ガチャ結果に戻る', gacha_contents_path, class: "uk-button uk-button-default" %>
 
 <ul uk-accordion="multiple: true">
+   <li>
+    <a class="uk-accordion-title" href="#">ver.3.1 2018/12/10(月)</a>
+    <div class="uk-accordion-content">
+        <ul>
+           <li>デフォルトで取得日が新しい順に並ぶようになりました</li>
+        </ul>
+    </div>
+  </li>
   <li>
     <a class="uk-accordion-title" href="#">ver.3.0 2018/12/02(日)</a>
     <div class="uk-accordion-content">
