--- a/app/views/grc_tools/release_notes.html.erb
+++ b/app/views/grc_tools/release_notes.html.erb
@@ -3,6 +3,14 @@
 
 <ul uk-accordion="multiple: true">
     <li>
+    <a class="uk-accordion-title" href="#">ver.3.1.2 2019/01/24(木)</a>
+    <div class="uk-accordion-content">
+        <ul>
+           <li>取得方法追加：特殊チケット</li>
+        </ul>
+    </div>
+  </li>
+    <li>
     <a class="uk-accordion-title" href="#">ver.3.1.1 2018/12/11(火)</a>
     <div class="uk-accordion-content">
         <ul>
